Reposition Probes and Quest page alignment (fixes #163)

--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -999,6 +999,10 @@ div.needleBox {
   flex-direction: column;
   justify-content: space-around; }
 
+.words-contentBox {
+  position: absolute;
+  top: 0; }
+
 .words-progress-indicator {
   display: inline-block;
   vertical-align: middle; }
