--- a/staRt/www/states/root/words/_words_styles.scss
+++ b/staRt/www/states/root/words/_words_styles.scss
@@ -7,6 +7,11 @@
 	justify-content: space-around;
 }
 
+.words-contentBox {
+	position: absolute;
+	top: 0;
+}
+
 .words-progress-indicator {
 	display: inline-block;
 	vertical-align: middle;
